:recycle: 엔드포인트 추가